# waylib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  common.cpp  common.h  common.hpp  compute.cpp  config.h  math.cpp  math.h  math.hpp  model.cpp  model.h  model.hpp  obj_loader.cpp  obj_loader.h  obj_loader.hpp  shader_preprocessor.cpp  suzane.gltf  test.cpp  texture.cpp  texture.h  texture.hpp  waylib.cpp  waylib.h  waylib.hpp  wgsl_types.hpp  window.cpp  window.h  window.hpp
cmake/: bundle.cmake
examples/: compute.cpp  cubemap.cpp  pbr.cpp  pbr.default.cpp  skyplane.cpp  skyplane.equirectangular.cpp  wireframe_monkey.cpp
modules/stylizer/: stylizer.h  stylizer.hpp
modules/stylizer/core/: CMakeLists.txt  config.h  config.hpp  core.cpp  core.h  core.hpp  interfaces.h  interfaces.manageable.h  managable.h  optional.h  shader_preprocessor.hpp  slang_types.hpp  utility.hpp  wgsl_types.hpp
modules/stylizer/core/shaders/embeded/: default_gbuffer.wgsl  default_gbuffer_data.wgsl  stylizer.default.slang  stylizer.slang  utility_data.wgsl  vertex_data.wgsl
modules/stylizer/core/utility/: optional.h  utility.hpp  wgsl_types.hpp
modules/stylizer/img/: CMakeLists.txt  img.cpp  img.h  img.hpp
modules/stylizer/pbr/: CMakeLists.txt  pbr.cpp  pbr.h  pbr.hpp
modules/stylizer/pbr/shaders/: pbr_combiners.wgsl  pbr_gbuffer.wgsl  pbr_gbuffer_data.wgsl  pbr_material.wgsl  pbr_material_data.wgsl
modules/stylizer/window/: CMakeLists.txt  window.cpp  window.h  window.hpp
modules/waylib/: waylib.h  waylib.hpp
modules/waylib/core/: CMakeLists.txt  config.h  config.hpp  core.cpp  core.h  core.hpp  interfaces.allocatable.h  interfaces.h  interfaces.manageable.h  optional.h  shader_preprocessor.hpp  utility.hpp  wgsl_types.hpp
modules/waylib/core/shaders/embeded/: default_blit.wgsl  default_gbuffer.wgsl  default_gbuffer_data.wgsl  inverse.wgsl  mesh_data.wgsl  utility_data.wgsl  vertex_data.wgsl
modules/waylib/img/: CMakeLists.txt  img.cpp  img.h  img.hpp
modules/waylib/window/: CMakeLists.txt  window.cpp  window.h  window.hpp
resources/: credits.txt  symmetrical_garden_02_1k.hdr  test.exr  test.hdr
resources/pbr/: pbr_packer.py
shaders/defaults/: pbr.displacement.wgsl  pbr.wgsl
shaders/waylib/: camera.wgsl  geometry_shader.wgsl  instance.wgsl  inverse.wgsl  light.wgsl  pbr.wgsl  pbr_data.wgsl  textures.wgsl  time.wgsl  vertex.wgsl  wireframe.wgsl
